--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.26",
     "expo-file-system": "~17.0.1",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
@@ -17,8 +18,7 @@
     "react-native": "0.74.5",
     "react-native-file-viewer": "^2.1.5",
     "react-native-passkit-wallet": "^0.1.6",
-    "react-native-webview": "13.8.6",
-    "expo-dev-client": "~4.0.26"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
